<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/Beige"
    android:orientation="vertical" >

	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
	    <TextView
	        android:id="@+id/group_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:background="#00000000"
	        android:clickable="false"
	        android:focusable="false"
	        android:focusableInTouchMode="false"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:longClickable="false"
	        android:text="@string/group"
	        android:textColor="@color/DarkRed" />
	
		<Spinner
		    android:id="@+id/group_spinner"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	        android:layout_alignBaseline="@id/group_label"
		    android:layout_toRightOf="@id/group_label"
		    android:background="#00000000"
		    android:textColor="@color/DarkRed"
		    android:drawSelectorOnTop="true"
		    android:textAppearance="?android:attr/textAppearanceMedium" />
		
    </RelativeLayout>

    <TextView
        android:id="@+id/group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/DarkRed"
        android:layout_marginTop="5dp"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/groupname_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_corners"
        android:paddingLeft="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android:id="@+id/group_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/DarkRed"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/groupinstruction" />      
  

    <Button
        android:id="@+id/btn_createnew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_marginLeft="100dp"
	    android:layout_marginRight="100dp"
	    android:layout_marginTop="15dp"
	    android:background="@drawable/btn_selector"
	    android:minHeight="30dp"
        android:text="@string/creategroup"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
	    android:layout_marginLeft="100dp"
	    android:layout_marginRight="100dp"
	    android:layout_marginTop="15dp"
	    android:background="@drawable/btn_selector"
	    android:minHeight="30dp"
        android:text="@string/updategroup" />
        
    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
	    android:layout_marginLeft="100dp"
	    android:layout_marginRight="100dp"
	    android:layout_marginTop="15dp"
	    android:background="@drawable/btn_selector"
	    android:minHeight="30dp"
        android:layout_marginBottom="5dp"
        android:text="@string/deletegroup" />
    
</LinearLayout>
 