<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@color/Beige" android:orientation="vertical">

		<EditText
		    android:id="@+id/lbl_enter_new_passwd"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="3dp"
		    android:layout_marginLeft="20dp"
		    android:layout_marginRight="20dp"
		    android:layout_marginTop="3dp"
		    android:background="#00000000"
		    android:clickable="false"
		    android:ems="10"
		    android:focusable="false"
		    android:focusableInTouchMode="false"
		    android:gravity="center"
		    android:longClickable="false"
		    android:text="@string/login_password"
		    android:textColor="@color/DarkRed" >

			<requestFocus />
		</EditText>

		<EditText
		    android:id="@+id/et_enter_new_password"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="20dp"
		    android:layout_marginRight="20dp"
		    android:layout_marginTop="3dp"
		    android:background="@drawable/rounded_corners"
		    android:ems="10"
		    android:gravity="center"
		    android:hint="@string/password_hint"
		    android:inputType="textPassword"
		    android:textColor="@color/DarkRed" />
		
	    <Button
	        android:id="@+id/btn_submit"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="100dp"
	        android:layout_marginRight="100dp"
	        android:layout_marginTop="15dp"
	        android:background="@drawable/btn_selector"
	        android:minHeight="30dp"
	        android:text="@string/submit" />
</LinearLayout>