<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@color/Beige" android:orientation="vertical">

		<EditText
		    android:id="@+id/lbl_enter_old_passwd"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="20dp"
		    android:layout_marginRight="20dp"
		    android:layout_marginTop="3dp"
		    android:background="#00000000"
		    android:clickable="false"
		    android:ems="10"
		    android:focusable="false"
		    android:focusableInTouchMode="false"
		    android:gravity="center"
		    android:longClickable="false"
		    android:text="@string/enter_old_password"
		    android:textColor="@color/DarkRed" >
			<requestFocus />
		</EditText>

		<EditText
		    android:id="@+id/et_enter_old_password"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="10dp"
		    android:layout_marginLeft="20dp"
		    android:layout_marginRight="20dp"
		    android:layout_marginTop="3dp"
		    android:background="@drawable/rounded_corners"
		    android:ems="10"
		    android:gravity="center"
		    android:hint="@string/password_hint"
		    android:inputType="textPassword"
		    android:textColor="@color/DarkRed" />

		<EditText
		    android:id="@+id/lbl_enter_new_passwd"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="20dp"
		    android:layout_marginRight="20dp"
		    android:layout_marginTop="3dp"
		    android:background="#00000000"
		    android:clickable="false"
		    android:ems="10"
		    android:focusable="false"
		    android:focusableInTouchMode="false"
		    android:gravity="center"
		    android:longClickable="false"
		    android:text="@string/enter_new_password"
		    android:textColor="@color/DarkRed" >
			<requestFocus />
		</EditText>

		<EditText
		    android:id="@+id/et_enter_new_password"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="10dp"
		    android:layout_marginLeft="20dp"
		    android:layout_marginRight="20dp"
		    android:layout_marginTop="3dp"
		    android:background="@drawable/rounded_corners"
		    android:ems="10"
		    android:gravity="center"
		    android:hint="@string/password_hint"
		    android:inputType="textPassword"
		    android:textColor="@color/DarkRed" />

	    <EditText
	        android:id="@+id/lbl_reenter_new_passwd"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginTop="3dp"
	        android:background="#00000000"
	        android:clickable="false"
	        android:ems="10"
	        android:focusable="false"
	        android:focusableInTouchMode="false"
	        android:gravity="center"
	        android:longClickable="false"
	        android:text="@string/renter_new_password"
	        android:textColor="@color/DarkRed">
			<requestFocus />
		</EditText>

	    <EditText
	        android:id="@+id/et_reenter_new_password"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginTop="3dp"
	        android:background="@drawable/rounded_corners"
	        android:ems="10"
	        android:gravity="center"
	        android:hint="@string/password_hint"
	        android:inputType="textPassword"
	        android:textColor="@color/DarkRed" />

</LinearLayout>